Add html form and template data for the army sheet

--- a/static/lang/en.json
+++ b/static/lang/en.json
@@ -129,7 +129,6 @@
                 "TakesNoDamage": "<actor>{actor}</actor> takes no damage.",
                 "TheTarget": "The target"
             },
-            "Attacks": "Attacks",
             "Character": {
                 "Attribute": {
                     "Apex": "Apex Attribute",
@@ -5823,7 +5822,8 @@
             "loot": "Loot",
             "npc": "NPC",
             "party": "Party",
-            "vehicle": "Vehicle"
+            "vehicle": "Vehicle",
+            "army": "Army"
         },
         "Item": {
             "action": "Ability",
